# Encoded-DC-Motor-Kit

./: README.md  app.c  blink_led.c
ROS2_Packages/: README.md
ROS2_Packages/encoded_dc_motor_kit_control/: CMakeLists.txt  package.xml
ROS2_Packages/encoded_dc_motor_kit_control/config/: controller.yaml
ROS2_Packages/encoded_dc_motor_kit_control/launch/: controllers.launch.py
ROS2_Packages/encoded_dc_motor_kit_description/: CMakeLists.txt  package.xml
ROS2_Packages/encoded_dc_motor_kit_description/launch/: robot_description.launch.py  rviz.launch.py  sim_launch.launch.py
ROS2_Packages/encoded_dc_motor_kit_description/meshes/: back_plate.stl  base_link.stl  hum_v3_1.stl  motor.stl  motor_front.stl  shaft_v2_1.stl  sides_v2_1.stl  sides_v2_2.stl
ROS2_Packages/encoded_dc_motor_kit_description/urdf/: encoded_dc_motor_kit.trans  encoded_dc_motor_kit.xacro  materials.xacro  ros2_control.xacro
ROS2_Packages/encoded_dc_motor_kit_gui/: CMakeLists.txt  package.xml
ROS2_Packages/encoded_dc_motor_kit_gui/encoded_dc_motor_kit_gui/: PID_parameters_publisher.py  feedback_subscriber_node.py  response_plotter_node.py
ROS2_Packages/ros2_motor_controller/: CMakeLists.txt  package.xml
ROS2_Packages/ros2_motor_controller_msgs/: CMakeLists.txt  package.xml
Resources/: Run MicroROS.docx  ascii_table.csv  ascii_table_generator.py
microROS_apps/motor_control_app/: app.c
microROS_apps/motor_position_control/: PID.c  app.c  app.h  encoder.c  encoder.h  microROS_setup.c  microROS_setup.h  motor.c  motor.h  pin_setup.h
microROS_apps/motor_speed_control/: README.md  app.c
(+3 files in other folders)
